@@ -1,10 +1,10 @@
-quisk/CHANGELOG.txt,sha256=cazVgBYCb57pgdzElqhjJtFmirf8R1N6oE33Ld5tbMg,106390
+quisk/CHANGELOG.txt,sha256=BFs9PC1VCRIRIRBdcuTVEvfZN-XJAuyVm6GfT4CUzkM,106576
 quisk/Extensions.txt,sha256=jnTrdI2YvVi4VAD-F89k6caPOUoIjIZeAgJCWi2RoQQ,52
 quisk/README.txt,sha256=jnTrdI2YvVi4VAD-F89k6caPOUoIjIZeAgJCWi2RoQQ,52
-quisk/__init__.py,sha256=GX2ZiSj67DGy3PlBUjFnh4ibacTi_-zuJ9LY-g5lpXw,48
+quisk/__init__.py,sha256=bTWaTjco4xdJLhmNg_XJNjzp8-r9AIor7-4MYR6vOuU,48
 quisk/__main__.py,sha256=qXarrIvmI4yBUSy88QXfRlNyG7qiIo4Sp2S9Fe36-go,177
 quisk/_quisk.cpython-310-x86_64-linux-gnu.so,sha256=m4wT6Dv2bBMpDOZI0smSTWGy1xhncC7_ANBioenrarY,897312
-quisk/_quisk.pyd,sha256=ymLQqg_CiANUbV0d4kH1C7owbxp0f-SvtWFP8zS46iU,257536
+quisk/_quisk.pyd,sha256=tsMWFpVtAd9DSp2mdcVGJeGeKmtPmehzAbdtATdxGbY,257536
 quisk/configure.py,sha256=9wh6H_ElmC34e3j-gh5ArVabHtjJASeLlpunJiHF-6g,172648
 quisk/defaults.html,sha256=9w75QahYVMVQjxCpIy924-yf1LujQpBOLRTrsEKSyVk,835
 quisk/docs.html,sha256=vq0aROrpTvzWLCZzTrsiwLuAVzqXVtrwNpZLdVUAYmY,62592
@@ -57,7 +57,7 @@ quisk/afedrinet/SOURCE.txt,sha256=QlA6d6_OurbazqGZxeZ2PMzY9ge-SIR8F7KzpL7YmQw,17
 quisk/afedrinet/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/afedrinet/afedri.py,sha256=QyKx5aGAFLjAgOfHOIFlSvVhn9CmxpIBFX5nvobTSaY,8526
 quisk/afedrinet/afedrinet_io.cpython-310-x86_64-linux-gnu.so,sha256=6QMWx82BtfHjAwRM0YKid3F4oV8d9l8DoyXVKpmU1j4,52608
-quisk/afedrinet/afedrinet_io.pyd,sha256=zOV0g4ya3yZw4McOA4ejS_CT7PDSFfXZgfogF51WdB0,21504
+quisk/afedrinet/afedrinet_io.pyd,sha256=P70u8tbsudALkWOB_IQDWp_Q1POlh3wjOPwuP--59jA,21504
 quisk/afedrinet/quisk_conf.py,sha256=PoGVdZEhpmQxND65lWjq8ukqBIOjyILGkymBSiN5dEM,3676
 quisk/afedrinet/quisk_conf_linux.py,sha256=aSOfGYK3erMd3nBd_DxXQEy9cKJufi8gPmZlUVWf6rw,3600
 quisk/afedrinet/quisk_conf_mac.py,sha256=aSOfGYK3erMd3nBd_DxXQEy9cKJufi8gPmZlUVWf6rw,3600
@@ -76,11 +76,11 @@ quisk/hermes/README.txt,sha256=ePBAYOjlM6NnkWhKABbe9oGIp2oW_EWTASwb2WN8Dkw,2981
 quisk/hermes/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/hermes/quisk_conf.py,sha256=bFCfn3RQ49HVBtRjutiYVDhrb_nkt8XUmBkInLdD6dQ,88
 quisk/hermes/quisk_conf2.py,sha256=bFCfn3RQ49HVBtRjutiYVDhrb_nkt8XUmBkInLdD6dQ,88
-quisk/hermes/quisk_hardware.py,sha256=ahYY-RwWD9owaoPpsrrRUx6veKLNxyqEfty6zsJQ7sM,50315
+quisk/hermes/quisk_hardware.py,sha256=cOnu2f0pMNzNPsYnjQ0fZj99Uahvfs7jSKsaip-s6Jc,50583
 quisk/hermes/quisk_widgets.py,sha256=uTgAwKuS5yEMcMb4YZbhEgV1Qazq04xIDntJjN1ADNc,7111
 quisk/hiqsdr/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/hiqsdr/quisk_conf.py,sha256=isrh6QZDLB4wQvbsopC_C78ZWBEtzY4VBvq71gXFQn8,1155
-quisk/hiqsdr/quisk_hardware.py,sha256=DiNWGQ65B3VzpjgBg1oRbQMGV3QFl4qu3zWeEU3w0CU,17310
+quisk/hiqsdr/quisk_hardware.py,sha256=7z9Ja7d2p7hYTejwaeGPc_pp8TBF4adRtry0o6CSZLc,17309
 quisk/n2adr/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/n2adr/conf1.py,sha256=2uwyUuZnpF1Fszsei6lbtC8ZXawazoimTG7NMPf015Q,480
 quisk/n2adr/conf2.py,sha256=OV8dZ20Wd17a1B5CPnPeXQBRJQ4u3JXhVtNgGNarXsc,709
@@ -112,14 +112,14 @@ quisk/soapypkg/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/soapypkg/quisk_hardware.py,sha256=xoZDp5KBGKT_fkU-lYcNoBM2mPjLd32XaZe7GaYb3eU,6563
 quisk/soapypkg/setup.py,sha256=PY0hR0agcoMV22RWDVge7N8gpzcBtG3qcoDF1kzmls0,1550
 quisk/soapypkg/soapy.cpython-310-x86_64-linux-gnu.so,sha256=zlGixwyJ5SaKjb70va7R4by_HbJWsSTEfAIsZ4TJicQ,56800
-quisk/soapypkg/soapy.pyd,sha256=pXjgHqENGNntZddeZ0pVvhtKo0Wj2Yd3Kds9kaEp22g,26112
+quisk/soapypkg/soapy.pyd,sha256=TlEFREQ6J7MUbfceWYpRRW7l-jPS7BXe5oiQ8bhIu7g,26112
 quisk/softrock/__init__.py,sha256=MsSFjiLMLJZ7QhUPpVBWKiyDnCzryquRyr329NoCACI,2
 quisk/softrock/hardware_net.py,sha256=hCaG1q8qT0UIWcm5AT3Jjq42YBplr0h4ggGWD4Q2IMg,3286
 quisk/softrock/hardware_usb.py,sha256=fAZRsV2vFNt5vZ1jRCvfRnIO5ZIxpt2_xfVZm2lL-U8,11260
 quisk/softrock/widgets_tx.py,sha256=45o9Qqf25piihUtkWY1yBXQcK-sQZrKsCor6_Q-45s4,531
-quisk-4.2.22.dist-info/METADATA,sha256=VtD_dUrPA6gkzezKOPaiGnkMy9cL9gHg5cLo2_KkAFQ,1617
-quisk-4.2.22.dist-info/WHEEL,sha256=jr7ubY0Lkz_yXH9FfFe9PTtLhGOsf62dZkNvTYrJINE,100
-quisk-4.2.22.dist-info/entry_points.txt,sha256=AwiLVD7Socquie-IOtLJ0V_fVQbMfUNlyVPMFid8ct8,73
-quisk-4.2.22.dist-info/license.txt,sha256=dOg6Fjezkq9y3X5AdRwMNY70fqm0Xl3U7mkykT_Ajzk,17908
-quisk-4.2.22.dist-info/top_level.txt,sha256=_QGvD8Rcms7NAbzNCL-xZKlwRlQLbrXn2mXTuMOmUwk,6
-quisk-4.2.22.dist-info/RECORD,,
+quisk-4.2.23.dist-info/METADATA,sha256=JljnL-mqOG-EMALW4iXWXRiY1qosznWRrbGfoDojmp4,1617
+quisk-4.2.23.dist-info/WHEEL,sha256=jr7ubY0Lkz_yXH9FfFe9PTtLhGOsf62dZkNvTYrJINE,100
+quisk-4.2.23.dist-info/entry_points.txt,sha256=AwiLVD7Socquie-IOtLJ0V_fVQbMfUNlyVPMFid8ct8,73
+quisk-4.2.23.dist-info/license.txt,sha256=dOg6Fjezkq9y3X5AdRwMNY70fqm0Xl3U7mkykT_Ajzk,17908
+quisk-4.2.23.dist-info/top_level.txt,sha256=_QGvD8Rcms7NAbzNCL-xZKlwRlQLbrXn2mXTuMOmUwk,6
+quisk-4.2.23.dist-info/RECORD,,
